--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 @media (prefers-reduced-motion: no-preference) {
-    * {
-      scroll-behavior: smooth;
-    }
+  * {
+  scroll-behavior: smooth;
   }
+}
 
 *,
 ::before,
@@ -13,14 +13,14 @@
 }
 
 body {
-    width: 100%;
-    height: 100vh;
-    margin: 0px;
-    background-color: rgb(43, 91, 110);
+  width: 100%;
+  height: 100vh;
+  margin: 0px;
+  background-color: #498ec6;
 }
 
 .navbar ul{
-  background-color: rgb(62, 120, 168);
+  background-color: rgb(19, 20, 100);
   list-style-type: none;
   padding: 0px;
   margin: 0px;
@@ -29,7 +29,7 @@ body {
 }
 
 .navbar a {
-  color: darkgreen;
+  color: #498ec6;
   text-decoration: wavy;
   padding: 15px;
   display: block;
@@ -37,34 +37,36 @@ body {
 }
 
 .navbar a:hover{
-  color: brown;
-  background-color: plum;
+  color: rgb(19, 20, 100);
+  background-color: rgb(102, 102, 204);
 }
 
 .navbar li{
   float: right;
   display: block;
-  padding: 15px;
-  text-decoration: none;
+  padding: 10px;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 1000;
+  font-size: 20px;
 }
 
 h1 {
-    margin: 10px;
-    font-family: 'Times', serif;
-    font-size: 60px;
-    color: rgb(180, 65, 65);
-    text-align: center;
+  margin: 10px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 60px;
+  color: whitesmoke;
+  text-align: center;
 }
 
 .break {
-    color:black;
-    border: 1px solid beige;
+  color:black;
+  border: 1px solid rgb(64, 80, 172);
 }
 
 h2 {
-    margin: 10px;
-    text-align: center;
-    font-family: 'Times', serif;
-    font-size: 40px;
-    color: rgb(241, 84, 84);
+  margin-top: 20px;
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 40px;
+  color: rgb(17, 0, 94);
 }
