--- a/projects.css
+++ b/projects.css
@@ -1,70 +1,72 @@
 @media (prefers-reduced-motion: no-preference) {
-    * {
-      scroll-behavior: smooth;
-    }
+  * {
+    scroll-behavior: smooth;
   }
+}
 
 *,
 ::before,
 ::after {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+padding: 0;
+margin: 0;
+box-sizing: border-box;
 }
 
 body {
-    width: 100%;
-    height: 100vh;
-    margin: 0px;
-    background-color: rgb(43, 91, 110);
+  width: 100%;
+  height: 100vh;
+  margin: 0px;
+  background-color: #498ec6;
 }
 
 .navbar ul{
-  background-color: rgb(62, 120, 168);
-  list-style-type: none;
-  padding: 0px;
-  margin: 0px;
-  overflow: hidden;
-  text-align: center;
+background-color: rgb(19, 20, 100);
+list-style-type: none;
+padding: 0px;
+margin: 0px;
+overflow: hidden;
+text-align: center;
 }
 
 .navbar a {
-  color: darkgreen;
-  text-decoration: wavy;
-  padding: 15px;
-  display: block;
-  text-align: center;
+color: #498ec6;
+text-decoration: wavy;
+padding: 15px;
+display: block;
+text-align: center;
 }
 
 .navbar a:hover{
-  color: brown;
-  background-color: plum;
+color: rgb(19, 20, 100);
+background-color: rgb(102, 102, 204);
 }
 
 .navbar li{
-  float: right;
-  display: block;
-  padding: 15px;
-  text-decoration: none;
+float: right;
+display: block;
+padding: 10px;
+font-family: 'Courier New', Courier, monospace;
+font-weight: 1000;
+font-size: 20px;
 }
 
 h1 {
-    margin: 10px;
-    font-family: 'Times', serif;
-    font-size: 60px;
-    color: rgb(180, 65, 65);
-    text-align: center;
+  margin: 10px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 60px;
+  color: whitesmoke;
+  text-align: center;
 }
 
 .break {
-    color:black;
-    border: 1px solid beige;
+  color:black;
+  border: 1px solid rgb(64, 80, 172);
 }
 
 h2 {
-    margin: 10px;
-    text-align: center;
-    font-family: 'Times', serif;
-    font-size: 40px;
-    color: rgb(241, 84, 84);
+  margin: 10px;
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 40px;
+  color: rgb(17, 0, 94);
 }
