--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 @media (prefers-reduced-motion: no-preference) {
   * {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
   }
 }
 
@@ -19,19 +19,32 @@ body {
   background-color: #498ec6;
 }
 
-.navbar ul{
+.navbar {
+  width: 100%; 
   background-color: rgb(19, 20, 100);
-  list-style-type: none;
-  padding: 0px;
-  margin: 0px;
-  overflow: hidden;
-  text-align: center;
 }
+
+.navbar ul{
+  display: flex;
+  list-style-type: none;
+  padding: 1rem;
+  justify-content: center;
+  overflow: hidden;
+  align-items: center;
+}
+
+.navbar li{
+  display: block;
+  padding: 0px 30px 0px 30px;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 1000;
+  font-size: 20px;
+  }
 
 .navbar a {
   color: #498ec6;
   text-decoration: wavy;
-  padding: 15px;
+  padding: 10px;
   display: block;
   text-align: center;
 }
@@ -39,15 +52,6 @@ body {
 .navbar a:hover{
   color: rgb(19, 20, 100);
   background-color: rgb(102, 102, 204);
-}
-
-.navbar li{
-  float: right;
-  display: block;
-  padding: 10px;
-  font-family: 'Courier New', Courier, monospace;
-  font-weight: 1000;
-  font-size: 20px;
 }
 
 h1 {
@@ -64,7 +68,7 @@ h1 {
 }
 
 h2 {
-  margin-top: 20px;
+  margin: 10px;
   text-align: center;
   font-family: 'Courier New', Courier, monospace;
   font-size: 40px;
