--- a/about.css
+++ b/about.css
@@ -4,6 +4,12 @@
   }
 }
 
+@media (max-width: 800px) {
+  .contact-inputs {
+    width: 80vw;
+  }
+}
+
 *,
 ::before,
 ::after {
@@ -16,7 +22,7 @@ body {
   width: 100%;
   height: 100vh;
   margin: 0px;
-  background-color: #498ec6;
+  background-color: rgb(64, 80, 172)
 }
 
 .navbar {
@@ -35,16 +41,16 @@ body {
 
 .navbar li{
   display: block;
-  padding: 0px 30px 0px 30px;
+  padding: 0 1.875rem;
   font-family: 'Courier New', Courier, monospace;
   font-weight: 1000;
-  font-size: 20px;
+  font-size: 1.25rem;
   }
 
 .navbar a {
   color: #498ec6;
   text-decoration: wavy;
-  padding: 10px;
+  padding: 1rem;
   display: block;
   text-align: center;
 }
@@ -54,17 +60,16 @@ body {
   background-color: rgb(102, 102, 204);
 }
 
+.break {
+  border: 0.125 solid whitesmoke;
+}
+
 h1 {
   margin: 10px;
   font-family: 'Courier New', Courier, monospace;
   font-size: 60px;
   color: whitesmoke;
   text-align: center;
-}
-
-.break {
-  color:black;
-  border: 1px solid rgb(64, 80, 172);
 }
 
 h2 {
