--- a/index.css
+++ b/index.css
@@ -7,16 +7,16 @@
 *,
 ::before,
 ::after {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+padding: 0;
+margin: 0;
+box-sizing: border-box;
 }
 
 body {
   width: 100%;
   height: 100vh;
   margin: 0px;
-  background-color: #498ec6;
+  background-color: rgb(64, 80, 172)
 }
 
 .navbar {
@@ -35,16 +35,16 @@ body {
 
 .navbar li{
   display: block;
-  padding: 0px 30px 0px 30px;
+  padding: 0 1.875rem;
   font-family: 'Courier New', Courier, monospace;
   font-weight: 1000;
-  font-size: 20px;
+  font-size: 1.25rem;
   }
 
 .navbar a {
   color: #498ec6;
   text-decoration: wavy;
-  padding: 10px;
+  padding: 1rem;
   display: block;
   text-align: center;
 }
@@ -52,6 +52,10 @@ body {
 .navbar a:hover{
   color: rgb(19, 20, 100);
   background-color: rgb(102, 102, 204);
+}
+
+.break {
+  border: 0.125 solid whitesmoke;
 }
 
 h1 {
@@ -62,25 +66,37 @@ h1 {
   text-align: center;
 }
 
-.fullscreen-img {
-  object-fit: cover;
-  width: 100vw;
-  height: 100vh;
-  display: block;
-}
-
-.overlay-text {
-  position: absolute;
-  color: white;
-  font-size: 3rem;
-  text-align: center;
-  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
-}
-
 h2 {
   margin: 10px;
   text-align: center;
   font-family: 'Courier New', Courier, monospace;
   font-size: 40px;
   color: rgb(17, 0, 94);
+}
+
+.container {
+  position: relative;
+  width: 100%;
+  max-height: 100vh;
+  overflow: hidden;
+}
+
+.fullscreen-img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.overlay-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: rgb(17, 0, 94);
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 3em;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.616); /* optional: adds a semi-transparent background */
+  padding: 20px;
+  border-radius: 10px;
 }
