--- a/contact.css
+++ b/contact.css
@@ -69,6 +69,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  background-image: url('images/matthew-mcbrayerblueimage.jpg');
 }
 
 .contact-left {
@@ -175,13 +180,6 @@ h2 {
 
 .contacts a:hover{
   color: purple;
-}
-
-.fullscreen-img {
-  object-fit: cover;
-  width: 100vw;
-  height: 100vh;
-  display: block;
 }
 
 .overlay-text {
