--- a/index.css
+++ b/index.css
@@ -7,9 +7,9 @@
 *,
 ::before,
 ::after {
-padding: 0;
-margin: 0;
-box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -74,17 +74,16 @@ h2 {
   color: rgb(17, 0, 94);
 }
 
-.container {
+.contact-container {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   position: relative;
-  width: 100%;
-  max-height: 100vh;
-  overflow: hidden;
-}
-
-.fullscreen-img {
-  width: 100%;
-  height: auto;
-  display: block;
+  background-image: url('images/matthew-mcbrayerblueimage.jpg');
 }
 
 .overlay-text {
