--- a/contact.css
+++ b/contact.css
@@ -22,7 +22,7 @@ body {
   width: 100%;
   height: 100vh;
   margin: 0px;
-  background-color: rgb(64, 80, 172)
+  background-color: rgb(64, 80, 172);
 }
 
 .navbar {
