--- a/index.css
+++ b/index.css
@@ -15,16 +15,16 @@
 body {
   width: 100%;
   height: 100vh;
-  margin: 0px;
-  background-color: rgb(64, 80, 172)
+  margin: 0;
+  background-color: rgb(64, 80, 172);
 }
 
 .navbar {
-  width: 100%; 
+  width: 100%;
   background-color: rgb(19, 20, 100);
 }
 
-.navbar ul{
+.navbar ul {
   display: flex;
   list-style-type: none;
   padding: 1rem;
@@ -33,13 +33,13 @@ body {
   align-items: center;
 }
 
-.navbar li{
+.navbar li {
   display: block;
   padding: 0 1.875rem;
   font-family: 'Courier New', Courier, monospace;
   font-weight: 1000;
   font-size: 1.25rem;
-  }
+}
 
 .navbar a {
   color: #498ec6;
@@ -49,28 +49,29 @@ body {
   text-align: center;
 }
 
-.navbar a:hover{
+.navbar a:hover {
   color: rgb(19, 20, 100);
   background-color: rgb(102, 102, 204);
 }
 
 .break {
-  border: 0.125 solid whitesmoke;
+  border: 0.125rem solid whitesmoke;
 }
 
 h1 {
-  margin: 10px;
+  margin: 0.625rem;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 60px;
+  font-size: 3.75rem;
   color: whitesmoke;
   text-align: center;
+  text-shadow:  0.125rem 0.125rem 0.5rem rgba(0, 0, 0, 0.7);
 }
 
 h2 {
-  margin: 10px;
+  margin: 0.625rem;
   text-align: center;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 40px;
+  font-size: 2.5rem;
   color: rgb(17, 0, 94);
 }
 
@@ -93,9 +94,21 @@ h2 {
   transform: translate(-50%, -50%);
   color: rgb(17, 0, 94);
   font-family: 'Courier New', Courier, monospace;
-  font-size: 3em;
+  font-size: 4rem;
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.616); /* optional: adds a semi-transparent background */
-  padding: 20px;
-  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.616);
+  padding: 4rem;
+  border-radius: 0.625rem;
+}
+
+.image {
+  display: block;
+  margin: 1.25rem auto;
+  max-width: 90%;
+  height: auto;
+}
+
+.border {
+  border: 0.5rem solid rgb(17, 0, 94);
+  margin: 1.25rem;
 }
