added a button that goes to resume, added some language logos (not done placing them correctly), and made navbar more responsive

--- a/contact.css
+++ b/contact.css
@@ -28,6 +28,8 @@ body {
 .navbar {
   width: 100%; 
   background-color: rgb(19, 20, 100);
+  position: fixed;
+  z-index: 1000;
 }
 
 .navbar ul{
@@ -179,7 +181,7 @@ h2 {
 }
 
 .contacts a:hover{
-  color: purple;
+  color: rgb(19, 20, 100);
 }
 
 .overlay-text {
