--- a/about.css
+++ b/about.css
@@ -4,7 +4,7 @@
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 50rem) {
   .contact-inputs {
     width: 80vw;
   }
@@ -13,24 +13,24 @@
 *,
 ::before,
 ::after {
-padding: 0;
-margin: 0;
-box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
   width: 100%;
   height: 100vh;
-  margin: 0px;
-  background-color: rgb(64, 80, 172)
+  margin: 0rem;
+  background-color: rgb(64, 80, 172);
 }
 
 .navbar {
-  width: 100%; 
+  width: 100%;
   background-color: rgb(19, 20, 100);
 }
 
-.navbar ul{
+.navbar ul {
   display: flex;
   list-style-type: none;
   padding: 1rem;
@@ -39,13 +39,13 @@ body {
   align-items: center;
 }
 
-.navbar li{
+.navbar li {
   display: block;
   padding: 0 1.875rem;
   font-family: 'Courier New', Courier, monospace;
   font-weight: 1000;
   font-size: 1.25rem;
-  }
+}
 
 .navbar a {
   color: #498ec6;
@@ -55,39 +55,81 @@ body {
   text-align: center;
 }
 
-.navbar a:hover{
+.navbar a:hover {
   color: rgb(19, 20, 100);
   background-color: rgb(102, 102, 204);
 }
 
 .break {
-  border: 0.125 solid whitesmoke;
+  border: 0.12rem solid whitesmoke;
+}
+
+.timeline {
+  position: relative;
+  margin: 3.125rem auto;
+  padding: 1.25rem 0;
+  max-width: 37.5rem;
+  border-left: 0.1875rem solid #ccc;
+}
+
+.timeline-item {
+  position: relative;
+  padding: 1.25rem 1.25rem 1.25rem 2.5rem;
+  margin-bottom: 1.875rem;
+}
+
+.timeline-item::before {
+  content: "";
+  position: absolute;
+  left: -0.6875rem;
+  top: 1.25rem;
+  width: 1.25rem;
+  height: 1.25rem;
+  background: rgb(19, 20, 100);
+  border-radius: 50%;
+  border: 0.1875rem solid white;
+  box-shadow: 0 0 0 0.1875rem rgb(19, 20, 100);
+}
+
+.timeline-date {
+  font-weight: bold;
+  color: #437eff;
+  margin-bottom: 0.625rem;
+}
+
+.timeline-content h3 {
+  margin: 0 0 0.3125rem;
+}
+
+.timeline-content p {
+  margin: 0;
+  color: #ffffff;
 }
 
 h1 {
-  margin: 10px;
+  margin: 0.625rem;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 60px;
+  font-size: 3.75rem;
   color: whitesmoke;
   text-align: center;
 }
 
 h2 {
-  margin: 10px;
+  margin: 0.625rem;
   text-align: center;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 40px;
+  font-size: 2.5rem;
   color: rgb(17, 0, 94);
 }
 
 .button {
-  display: inline-block; 
-  padding: 0.9375rem 1.875rem; 
-  background: #007bff; 
+  display: inline-block;
+  padding: 0.9375rem 1.875rem;
+  background: #007bff;
   color: rgb(17, 0, 94);
   border: none;
-  border-radius: 3.25rem; 
-  text-decoration: none; 
+  border-radius: 3.25rem;
+  text-decoration: none;
   text-align: center;
-  background: linear-gradient(270deg, rgb(122, 56, 167), rgb(99, 48, 238))
+  background: linear-gradient(270deg, rgb(122, 56, 167), rgb(99, 48, 238));
 }
