--- a/projects.css
+++ b/projects.css
@@ -4,7 +4,7 @@
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 50rem) {
   .contact-inputs {
     width: 80vw;
   }
@@ -13,24 +13,24 @@
 *,
 ::before,
 ::after {
-padding: 0;
-margin: 0;
-box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
   width: 100%;
   height: 100vh;
-  margin: 0px;
-  background-color: rgb(64, 80, 172)
+  margin: 0rem;
+  background-color: rgb(64, 80, 172);
 }
 
 .navbar {
-  width: 100%; 
+  width: 100%;
   background-color: rgb(19, 20, 100);
 }
 
-.navbar ul{
+.navbar ul {
   display: flex;
   list-style-type: none;
   padding: 1rem;
@@ -39,13 +39,13 @@ body {
   align-items: center;
 }
 
-.navbar li{
+.navbar li {
   display: block;
   padding: 0 1.875rem;
   font-family: 'Courier New', Courier, monospace;
   font-weight: 1000;
   font-size: 1.25rem;
-  }
+}
 
 .navbar a {
   color: #498ec6;
@@ -55,28 +55,27 @@ body {
   text-align: center;
 }
 
-.navbar a:hover{
+.navbar a:hover {
   color: rgb(19, 20, 100);
   background-color: rgb(102, 102, 204);
 }
 
 .break {
-  border: 0.125 solid whitesmoke;
+  border: 0.12rem solid whitesmoke;
 }
 
 h1 {
-  margin: 10px;
+  margin: 0.625rem;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 60px;
+  font-size: 3.75rem;
   color: whitesmoke;
   text-align: center;
 }
 
-
 h2 {
-  margin: 10px;
+  margin: 0.625rem;
   text-align: center;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 40px;
+  font-size: 2.5rem;
   color: rgb(17, 0, 94);
 }
