--- a/about.css
+++ b/about.css
@@ -26,8 +26,10 @@ body {
 }
 
 .navbar {
-  width: 100%;
+  width: 100%; 
   background-color: rgb(19, 20, 100);
+  position: fixed;
+  z-index: 1000;
 }
 
 .navbar ul {
@@ -112,6 +114,7 @@ h1 {
   font-size: 3.75rem;
   color: whitesmoke;
   text-align: center;
+  padding-top: 2rem;
 }
 
 h2 {
@@ -132,4 +135,33 @@ h2 {
   text-decoration: none;
   text-align: center;
   background: linear-gradient(270deg, rgb(122, 56, 167), rgb(99, 48, 238));
+}
+
+.button:hover{
+  border: 0.125rem solid rgb(17, 0, 94)
+}
+
+.contact-container {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  background-image: url('images/matthew-mcbrayerblueimage.jpg');
+}
+
+.overlay-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: rgb(17, 0, 94);
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 1rem;
+  text-align: center;
+  padding: 1rem;
+  border-radius: 0.625rem;
 }
