changed background from jpg to gif

--- a/index.css
+++ b/index.css
@@ -86,7 +86,7 @@ h2 {
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
-  background-image: url('images/matthew-mcbrayerblueimage.jpg');
+  background-image: url('images/matthew-mcbrayerblue.gif');
 }
 
 .overlay-text {
