--- a/about.css
+++ b/about.css
@@ -150,7 +150,7 @@ h2 {
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
-  background-image: url('images/matthew-mcbrayerblueimage.jpg');
+  background-image: url('images/matthew-mcbrayerblue.gif');
 }
 
 .overlay-text {
