--- a/contact.css
+++ b/contact.css
@@ -75,7 +75,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
-  background-image: url('images/matthew-mcbrayerblueimage.jpg');
+  background-image: url('images/matthew-mcbrayerblue.gif');
 }
 
 .contact-left {
