added more responsive css for home page, fixed some responsive issues with text on home page html, fixed text and margin issues on project section

--- a/projects.css
+++ b/projects.css
@@ -67,7 +67,8 @@ body {
 }
 
 h1 {
-  margin: 0.625rem;
+  margin-top: 10rem;
+  margin-bottom: 5rem;
   font-family: 'Courier New', Courier, monospace;
   font-size: 3.75rem;
   color: whitesmoke;
