--- a/projects.css
+++ b/projects.css
@@ -4,12 +4,6 @@
   }
 }
 
-@media (max-width: 50rem) {
-  .contact-inputs {
-    width: 80vw;
-  }
-}
-
 *,
 ::before,
 ::after {
@@ -21,7 +15,7 @@
 body {
   width: 100%;
   height: 100vh;
-  margin: 0rem;
+  margin: 0;
   background-color: rgb(64, 80, 172);
 }
 
@@ -67,7 +61,7 @@ body {
 }
 
 h1 {
-  margin-top: 10rem;
+  margin-top: 0;
   margin-bottom: 5rem;
   font-family: 'Courier New', Courier, monospace;
   font-size: 3.75rem;
@@ -76,7 +70,7 @@ h1 {
 }
 
 h2 {
-  margin: 0.625rem;
+  margin-top: 0.625rem;
   text-align: center;
   font-family: 'Courier New', Courier, monospace;
   font-size: 2.5rem;
@@ -84,7 +78,7 @@ h2 {
 }
 
 .contact-container {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -92,6 +86,7 @@ h2 {
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
+  flex-direction: column;
   background-image: url('images/matthew-mcbrayerblue.gif');
 }
 
@@ -153,3 +148,5 @@ h2 {
 .project-tile:hover {
   transform: scale(1.05);
 }
+
+/* Responsive adjustments for smaller screens */
